--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -4,43 +4,70 @@
   background-color: white;
   background-size: cover;
   display: flex;
+  align-items: center;
+  justify-content: center;
 
+
+  //typography 
+  h1{
+    text-align: center;
+    font-size:3em;
+    font-weight:900;
+    @include mobile{
+      font-size: 2rem;
+      overflow: hidden;
+    }
+  }
+  h3{
+    font-size:0.85rem;
+    font-family: 'Roboto Mono';
+    font-style: italic;
+    @include mobile{
+      font-size: 0.65rem;
+      overflow: hidden;
+    }
+  }
   form{
-    width: 70%;
-    height: 70%;
+    width: 95%;
+    height: 80%;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-
+    overflow: hidden;
     input{
-      width: 300px;
+      width: 550px;
       height: 30px;
       font-size:14px;
       @include mobile{
-        width: 200px;
-        height: 20px;
+        width: 230px;
+        height: 30px;
+      }
+    }
+    label{
+      @include mobile{
+        font-size: 0.85rem;
+        overflow: hidden;
       }
     }
 
     textarea{
-      width: 300px;
+      width: 550px;
       height: 200px;
       font-size:14px;
       @include mobile{
-        width: 200px;
+        width: 230px;
         height: 100px;
       }
     }
 
     button{
+      margin-top:1em;
       width: 150px;
       height: 30px;
-      color: white;
-      background-color: #4d2ee8;
-      border-radius: 10px;
-      font-weight: 500;
       cursor: pointer;
+      overflow: hidden;
+      font-family: 'Roboto Mono';
 
       &:focus{
         outline:none;
