--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -3,11 +3,9 @@
 .portfolio {
   background-color: $mainColor;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   overflow: hidden;
-
-
+  justify-content: center;
+/*****Typography********************************/
   h1 {
     margin-top:1em;
     font-size: 2rem;
@@ -17,49 +15,51 @@
       font-size: 1.5em;
     }
   }
-
-  ul {
-    // margin: 20px;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    overflow: hidden;
-    text-align: center;
-
-    @include mobile{
-     
-      //margin: 10px 0;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    li{
-      font-size: 1.5rem;
-      cursor: pointer;
-      margin-bottom: 1em;
-      text-align: center;
-      
-        &.active{
-          border-bottom: 1px solid black;
-          color:black;
-        }
-        @include mobile {
-          font-size: 1rem;
-        }
-    }
-   
-  }
-
-  .container {
+/*****Typography********************************/
+  main{
     width: 70%;
+    height:40%;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
-    scrollbar-color: pink;
-    @include mobile{
-      width: 100%;
-      height: 70%;
+    //flex-direction: row;
+    
+    .left{
+      flex:0.2;
+      display: flex;
+      flex-direction: row;
+      margin-right: 5em;
+      
+      ul {
+        width: 100%;
+        // // margin: 20px;
+        // padding: 0;
+        // list-style: none;
+        // display: flex;
+        // overflow: hidden;
+        // text-align: center;
+    
+        // @include mobile{
+        
+        //   //margin: 10px 0;
+        //   flex-wrap: wrap;
+        //   justify-content: center;
+        // }
+      
+      }
+    }
+    .right {
+      flex:0.8;
+      display:relative;
+      .container {
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        scrollbar-color: pink;
+        
+      }
     }
 
   }
