--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,7 +1,8 @@
 @import "../../global.scss";
-li{
+
+  li{
   font-size: 20px;
-  margin-right: 50px;
+  //margin-right: 50px;
   padding:7px;
   border-radius: 1px;
   cursor: pointer;
@@ -10,7 +11,9 @@ li{
   }
   
     &.active{
-      border-bottom: 1px solid black;
-      color:white;
+      border-left: 2px solid black;
+      background-color:rgb(238, 238, 238);
     }
-}
+  }
+
+  
