--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,33 +5,48 @@
   display: flex;
   overflow: hidden;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: -5em 5em 0 0;
 /*****Typography********************************/
   h1 {
-    margin-top:1em;
     font-size: 2rem;
     overflow: hidden;
-
     @include mobile{
       font-size: 1.5em;
     }
   }
 /*****Typography********************************/
+  head{
+    width: 70%;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+  }
   main{
+   // margin-top:7em;
     width: 70%;
     height:40%;
     display: flex;
     align-items: center;
     justify-content: center;
     //flex-direction: row;
+    @include mobile{
+      width:100%;
+    }
     
     .left{
       flex:0.2;
       display: flex;
       flex-direction: row;
-      margin-right: 5em;
-      
+      @include mobile{
+        flex:0.25;
+      }
       ul {
-        width: 100%;
+        width: 80%;
+        padding-left:100px;
+        align-items: center;
+        margin:0;     
         // // margin: 20px;
         // padding: 0;
         // list-style: none;
@@ -45,20 +60,34 @@
         //   flex-wrap: wrap;
         //   justify-content: center;
         // }
+        @include mobile{
+          width:80%;
+          margin-left:0;
+          padding: 0;
+        }
       
       }
     }
     .right {
-      flex:0.8;
+      flex:0.4;
       display:relative;
+      @include mobile{
+        flex:0.6;
+        display:flex;
+        justify-content: center;
+      }
       .container {
         width: 50%;
+        margin-left:4em;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
         scrollbar-color: pink;
-        
+        @include mobile{
+          width:80%;
+         margin-left:0;
+        }
       }
     }
 
