--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,13 +1,20 @@
 @import "../../global.scss";
 
   li{
+  width:100%;
   font-size: 20px;
   //margin-right: 50px;
   padding:7px;
   border-radius: 1px;
   cursor: pointer;
   @include mobile{
-    margin-right:0px;
+    //margin-right:0px;
+    width:100%;
+  }
+  @media (max-width: 797px) {
+    li {
+       width: 100%;
+    }
   }
   
     &.active{
