--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -37,20 +37,20 @@
             color:inherit;
             text-decoration:none;
             @include mobile {
-              font-size: 1.9em;
+              font-size: 1.5em;
               line-height: 1.95em;
             }
            }
+          &:hover{
+              font-weight:700;
+              color: #0000F0;
+          }
+          @include mobile {
+            margin-bottom:0em;
+            padding-left: 0px;
+          }
         
-        &:hover{
-            font-weight:700;
-            color: #0000F0;
         }
-        @include mobile {
-          margin-bottom:0em;
-        }
-        
-    }
 
     @include mobile {
       display: flex;
