--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -8,6 +8,7 @@
   align-items: center;
   flex-direction: column;
   margin: -5em 5em 0 0;
+ 
 /*****Typography********************************/
   h1 {
     color:black;
@@ -17,6 +18,9 @@
     @include mobile{
       font-size: 1.8em;
     }
+    @media (max-width: 775px){
+      padding-bottom:20px;
+   }
   }
   h3{
     font-size: 1em;
@@ -26,6 +30,9 @@
     @include mobile{
       font-size: 0.9em;
     }
+    @media (max-width: 775px){
+     font-size: 0.8em;
+   }
   }
   h5{
     overflow: hidden;
@@ -36,6 +43,10 @@
     @include mobile{
       font-size: 0.9em;
     }
+    @media (max-width: 775px){
+      font-size: 0.6em;
+      margin-top:-3em;
+    }
   }
   p{
     font-size: 0.8rem;
@@ -45,31 +56,40 @@
     @include mobile{
       font-size: 0.7em;
     }
+    @media (max-width: 775px){
+      font-size: 0.5em;
+    }
   }
   a{
     color:#0000F0;
     padding-left: 0.2em;
    font-size: 1.2em;
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 0.1px #0000F0, 0 0 0.1px #0000F0, 0 0 4px #f0008c;
+    @media (max-width: 775px){
+      font-size: 0.95em;
+    }
   }
 /*****T********Layout************************/
-  head{
-    width: 70%;
-    display:flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  main{
-    width: 70%;
+head{
+  width: 70%;
+  display:flex;
+  align-items: center;
+  flex-direction: column;
+}
+main{
+  width: 70%;
+  height:60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.10);
+  @include mobile{
+    width:80%;
     height:60%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.10);
-    @include mobile{
-      width:80%;
-      height:60%;
-    }
+  }
+  @media (max-width: 775px){
+    width: 90%;
+ }
     
     .left{
       flex:0.2;
@@ -78,6 +98,9 @@
       @include mobile{
         flex:0.25;
       }
+      @media (max-width: 775px){
+        flex:0.25;
+     }
       ul {
         width: 80%;
         padding-left:100px;
@@ -89,6 +112,9 @@
           margin-left:0;
           padding: 0;
         }
+        @media (max-width: 775px){
+          width: 100%;
+       }
       
       }
     }
@@ -101,6 +127,9 @@
         display:flex;
         justify-content: center;
       }
+      @media (max-width: 775px){
+        flex:0.65;
+     }
       .container {
         width: 70%;
         height: 100%;
