--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -12,10 +12,9 @@
     //margin-right:0px;
     width:100%;
   }
-  @media (max-width: 797px) {
-    li {
-       width: 100%;
-    }
+  @media (max-width: 775px) {
+       padding:15px;
+       font-size: 0.85rem;
   }
   
     &.active{
