--- a/src/components/letter/letter.scss
+++ b/src/components/letter/letter.scss
@@ -161,19 +161,20 @@
       
      }
      p{
-      font-family:'Roboto Mono';
+      font-family: 'Quicksand', sans-serif;
+      font-weight: 500;
       width: 90%;
-       font-size: 1.1rem;
+       font-size: 1.12rem;
        display: flex;
        text-align: left;
        margin-right:5em;
+       overflow: hidden;
+       margin-bottom: 7.5px;
        @include mobile{
         font-size: 1rem;
         margin-right:2em;
       }
       @media (max-width: 775px){
-        //margin-bottom:0.3rem;
-        //line-height: 14px;
         margin-right:0;
         width: 95%;
         font-size: 0.9em;
